# OSPSD-HW1

./: .gitignore  .gitmodules  CMakeLists.txt  Interface.md  LICENSE.txt  README.md  component.md  interface.md  pull_request_template.md  sample_emails.csv
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: Config.h  ConversationClient.h  ConversationHistory.h  Error.h  IConfig.h  IConversationClient.h  IConversationHistory.h  IMessage.h  INLPProcessor.h  IResponseFormatter.h  Message.h  NLPProcessor.h  ResponseFormatter.h  calculator.h
scripts/: fetch_emails.py  run_pipeline.py  save_emails.py
scripts/hooks/: pre-commit
src/: Config.cpp  Config.h  ConversationClient.cpp  ConversationClient.h  ConversationHistory.cpp  ConversationHistory.h  NLPProcessor.cpp  NLPProcessor.h  ResponseFormatter.cpp  calculator.cpp  integrate.cpp  lab3.c  main.cpp  notifier.cpp
src/calculator/: test_calculator.cpp
src/logger/: logger.cpp  logger.h  test_logger.cpp
src/notifier/: notifier.cpp  notifier.h
tests/: test_ai_conversation_client_integration.cpp  test_calculator_logger.cpp  test_config.cpp  test_conversation.cpp  test_conversation_client.cpp  test_conversation_history.cpp  test_conversation_history_integration.cpp  test_e2e.cpp  test_end_to_end.cpp  test_endpoint.cpp  test_error.cpp  test_error_handling.cpp  test_integration.cpp  test_interfaces.cpp  test_logger_notifier.cpp  test_message.cpp  test_message_flow_integration.cpp  test_nlp_processor.cpp  test_notifier.cpp  test_response_formatter.cpp
